fix: Adjust icon vertical alignment and ensure SVG fills its container.

--- a/assets/stylesheets/common/anime-database.scss
+++ b/assets/stylesheets/common/anime-database.scss
@@ -2256,6 +2256,13 @@
       flex-shrink: 0;
       width: 1rem;
       height: 1rem;
+      margin-top: 2px; // Push icon down to align with text baseline
+
+      svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
     }
 
     input {
